<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyApplication">
   <LinearLayout
       android:id="@+id/ll_main_content"
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:orientation="horizontal" />
   <RadioGroup
       android:layout_width="match_parent"
       android:layout_height="58dp"
       android:background="@drawable/bg_border_top"
       android:paddingTop="8dp"
       android:orientation="horizontal">
      <RadioButton
          android:id="@+id/rb_main_home"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:button="@null"
          android:textAlignment="center"
          android:gravity="center_horizontal"
          android:drawableTop="@drawable/selector_main_rb_home"
          android:textColor="@drawable/selector_main_rb_text"
          android:textSize="12dp"
          android:background="@null"
          android:text="@string/text_home" />
      <RadioButton
          android:id="@+id/rb_main_earnings"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:button="@null"
          android:textAlignment="center"
          android:gravity="center_horizontal"
          android:drawableTop="@drawable/selector_main_rb_earnings"
          android:textColor="@drawable/selector_main_rb_text"
          android:textSize="12dp"
          android:background="@null"
          android:text="@string/text_earnings"/>
      <RadioButton
          android:id="@+id/rb_main_work"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:button="@null"
          android:textAlignment="center"
          android:gravity="center_horizontal"
          android:drawableTop="@drawable/selector_main_rb_work"
          android:textColor="@drawable/selector_main_rb_text"
          android:textSize="12dp"
          android:background="@null"
          android:text="@string/text_work"/>
      <RadioButton
          android:id="@+id/rb_main_user"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:button="@null"
          android:textAlignment="center"
          android:gravity="center_horizontal"
          android:drawableTop="@drawable/selector_main_rb_user"
          android:textColor="@drawable/selector_main_rb_text"
          android:textSize="12dp"
          android:background="@null"
          android:text="@string/text_user"/>
   </RadioGroup>
</LinearLayout>